--- a/Client/BlazorApp/Shared/MainLayout.razor
+++ b/Client/BlazorApp/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 </PageTitle>
 
 <div class="page" >
-    <div title="sidebar" class="sidebar" style="width: @((bkcolor ? "300px" : "50px"))">
+    <div title="sidebar" class="sidebar" style="width: @((bkcolor ? "20%" : "5%"))">
 
         <NavMenu TriggerParentMethod="ToggleBkColorTriger" />
 
