--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -6,8 +6,10 @@
 @using Microsoft.JSInterop
 @using CommonCode
 @using MauiBlazorApp.Shared
-
 @using CommonCode.Services
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
 
 @* @using Microsoft.JSInterop
  *@
