--- a/Client/BlazorApp/Shared/MainLayout.razor.css
+++ b/Client/BlazorApp/Shared/MainLayout.razor.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     z-index: 0;
+    width:100%;
 }
 
 .main {
@@ -13,6 +14,7 @@
     margin-right: 20px;
     display: block;
     z-index: 0;
+    
 }
 
 .sidebar {
