--- a/Client/MauiBlazorApp/Pages/Android.razor
+++ b/Client/MauiBlazorApp/Pages/Android.razor
@@ -145,6 +145,8 @@ else
     private void ClearSearchText()
     {
         searchText = "";
+        searchResults = null;
+
     }
 
     List<PersonModel> PersonList;
