--- a/Client/BlazorApp/Pages/Android.razor
+++ b/Client/BlazorApp/Pages/Android.razor
@@ -19,241 +19,50 @@
 
     <script src="exportPdf.js"></script>
 
-
 </head>
 
-<h1>person list</h1>
-<h1> Android </h1>
+<div class="page">
 
-<div class="table-container">
-    <div class="input-group mb-3">
+    <div class="header">
 
+        <div class="search-bar-container">
 
-        <input type="text" class="search-bar" placeholder="Search..." @bind="searchText" @oninput="HandleSearchTextChanged" />
+            <span class="personList">Personen Liste</span>
 
-        <button class="btn btn-clear" type="button" @onclick="ClearSearchText">
-            <i class="fa-regular fa-delete-left custom-icon"></i> X
-        </button>
+            <div class="search-bar-wrapper">
 
-        <div class="input-group-append">
-            <button class="btn btn-Search" type="button" @onclick="BtnSearch_Clicked">Search</button>
+                <input type="text" @bind="searchText" @oninput="HandleSearchTextChanged" class="search-bar"
+                       placeholder="SUCHE" aria-label="Search" aria-describedby="search-addon" />
+
+                <div class="btn-container">
+
+                    @if (!string.IsNullOrEmpty(searchText))
+                    {
+                        <button class="btn-clear" type="button" @onclick="ClearSearchText">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                 class="i-clear" viewBox="0 0 20 20 ">
+                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z" />
+                            </svg>
+                        </button>
+                    }
+                    <button class="search-btn" type="button" @onclick="BtnSearch_Clicked">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                             class="i-search" viewBox="0 0 20 20">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                        </svg>
+                    </button>
+
+                </div>
+
+            </div>
+
         </div>
+
     </div>
-</div>
 
 
-<style>
-
-    .custom-icon {
-        color: red;
-        block-size: auto;
-    }
-
-
-    .search-bar {
-        border: solid;
-        border-radius: 40px 0 0 40px;
-        font-size: 15px;
-    }
-
-    .btn-Search {
-        background: none;
-        color: black;
-        border-radius: 0 40px 40px 0;
-        /* font-size: 15px; */
-        border: solid;
-        font-size: 1.2rem;
-    }
-
-    .btn-outline-secondary {
-        background: none;
-        border: groove;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    }
-
-    .btn-outline-secondary {
-        color: black;
-    }
-
-
-    .btn-Search:hover {
-        background-color: green;
-    }
-
-    .btn-outline-secondary:focus {
-        outline: none;
-    }
-
-
-
-
-    body {
-        min-height: 100vh;
-    }
-
-    .btn-clear {
-        background: none;
-        font-size: 15px;
-        border: solid;
-        padding: 0.5rem 0.9rem 0.5rem 1rem;
-    }
-
-        .btn-clear:hover {
-            color: red;
-        }
-
-        .btn-clear:focus {
-            outline: none;
-        }
-
-
-
-    .input-group-append button:first-child {
-        margin-right: 0.5rem;
-    }
-
-    .input-group {
-        /*  position: fixed;
-                top: 50px; /* Adjust as needed */
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: auto; /* Ensure the search bar is above the table */
-        background-color: white;
-        padding: 1px;
-        border-radius: 50px;
-        border-radius: 0 0 0 0;
-        margin-bottom: 1px;
-    }
-
-    .btn-clear i {
-        font-size: 1rem;
-        border-radius: 80%;
-    }
-
-    .input-group-append button:first-child {
-        margin-right: 0.5rem;
-    }
-
-
-
-
-    .btn-primary.btn-sm,
-    .btn-danger.btn-sm {
-        padding: 0.25rem 0.5rem;
-        font-size: 0.30rem;
-    }
-
-
-    .btn-secondary {
-        background-color: Highlight;
-        border-color: green;
-        color: black;
-        font-weight: normal;
-    }
-
-        .btn-secondary:hover {
-            background-color: none;
-            border-color: None;
-            color: lightblue;
-            font-weight: normal;
-            border: none
-        }
-
-        .btn-secondary:active,
-        .btn-secondary.active {
-            background-color: white;
-            border-color: None;
-            color: lightblue;
-            font-weight: normal;
-            border: none
-        }
-
-    .dropdown-toggle.btn-secondary {
-        background-color: white;
-        border-color: None;
-        color: lightblue;
-        font-weight: normal;
-        border: none
-    }
-
-        .dropdown-toggle.btn-secondary:not([disabled]):not(.disabled).active:focus {
-            box-shadow: none;
-        }
-
-        .dropdown-toggle.btn-secondary:focus {
-            box-shadow: none;
-            background-color: green;
-        }
-
-    .table-container {
-        /*         max-height: calc(100vh - 120px); /* Subtract the height of the search bar and button container */
-        /*         margin-top: 20px; /* Adjust as needed */
-
-        max-height: 600px; /* Adjust this value to set the maximum height of the container */
-        overflow-y: auto;
-    }
-
-
-
-    .person-name {
-        font-weight: bold;
-        font-size: 1.2em;
-        margin-bottom: 1px;
-        margin-top: 1px;
-    }
-
-    .person-vorname {
-        margin-right: 2px;
-        margin-bottom: 1px;
-        margin-top: 1px;
-    }
-
-    .person-telefonnummer {
-        color: black;
-        margin-top: 1px; /* Adjust the value as needed */
-        margin-bottom: 0px;
-        font-family: Britannic;
-        font: bold;
-    }
-
-
-    .person-list {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .person-item {
-        padding: 2px;
-        border-bottom: 1px solid #ccc;
-    }
-
-    .divider {
-        border-bottom: 1px solid black;
-        margin-bottom: 0,1px;
-        margin-top: 0px;
-    }
-
-</style>
-
-
-
-<div class="dropdown">
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        @if (searchResults != null)
-        {
-            @foreach (var person in searchResults)
-            {
-                <li class="dropdown-item">@person.Nachname</li>
-            }
-        }
-
-    </ul>
-</div>
-
-@if (searchResults != null)
-{
-
-    <div class="table-responsive">
+    @if (searchResults != null)
+    {
         <table class="table">
             <thead>
                 <tr>
@@ -265,12 +74,7 @@
             <tbody>
                 @foreach (var person in searchResults)
                 {
-                    @*                     <tr @onclick="@( () => DisplayOption(person) )">
-
-            *@
-                    @*                     <tr @onclick="@( () => DisplayOption(person) )">
-            *@
-                    <tr>
+                    <tr @onclick="@(() => DisplayDetails(person.Id))">
                         <td>@person.Nachname</td>
                         <td>@person.Vorname</td>
                         <!-- Add other table data here -->
@@ -278,61 +82,62 @@
                 }
             </tbody>
         </table>
-    </div>
+    }
 
+    @if (PersonList == null)
+    {
+        <p>Loading...</p>
+    }
+    else
+    {
+        <div classs="names">
 
-}
+            @foreach (var person in PersonList)
+            {
+                <div class="card">
+                    <div class="card-body">
 
+                        <div class="person-item" @onclick="@(() => DisplayDetails(person.Id))">
 
-@if (PersonList == null)
-{
-    <p>Loading...</p>
-}
-else
-{
-    <div class="table-responsive">
-        <table class="table">
-            <tbody>
-                @foreach (var person in PersonList)
-                {
-                    <div class="person-item" @onclick="@(() => DisplayDetails(person.Id))">
+                            @*  <div class="person-item" @onclick="@(() => Modal.Show<PersonDisplay>(" ", new ModalParameters { { "Id", person.Id } }))"> *@
 
-                        <div class="person-name">
-                            <span class="person-vorname">@person.Vorname</span>
-                            <span class="person-nachname">@person.Nachname</span>
-                        </div>
+                            <div class="person-name">
+                                <span class="person-vorname">@person.Vorname</span>
+                                <span class="person-nachname">@person.Nachname</span>
+                            </div>
 
-                        @* @foreach (var telefonnummer in person.PersonNummern)
-                {
-                <div>@telefonnummer.TelNummer</div>
-                } *@
-                        @if (person.PersonNummern.Any())
-                        {
-                            var firstNumber = person.PersonNummern.First()?.TelNummer;
-                            if (person.PersonNummern.Count > 1)
+                            @if (person.PersonNummern.Any())
                             {
-                                var secondNumber = person.PersonNummern.ElementAtOrDefault(1)?.TelNummer;
-                                if (!string.IsNullOrEmpty(secondNumber))
+                                var firstNumber = person.PersonNummern.First()?.TelNummer;
+                                if (person.PersonNummern.Count > 1)
                                 {
-                                    secondNumber = secondNumber.Substring(0, Math.Min(5, secondNumber.Length));
-                                    <div>@firstNumber /*** @secondNumber</div>
+                                    var secondNumber = person.PersonNummern.ElementAtOrDefault(1)?.TelNummer;
+                                    if (!string.IsNullOrEmpty(secondNumber))
+                                    {
+                                        secondNumber = secondNumber.Substring(0, Math.Min(5, secondNumber.Length));
+                                        <div>@firstNumber<br />@secondNumber...</div>
+                                    }
+                                }
+                                else
+                                {
+                                    <div>@firstNumber</div>
                                 }
                             }
-                            else
-                            {
-                                <div>@firstNumber</div>
-                            }
-                        }
-
-                        <div class="divider"></div>
+                            <span class="person-email"> @person.Email  </span>
+                        </div>
                     </div>
-                }
-            </tbody>
-        </table>
-    </div>
-}
+                </div>
+            }
+
+            @*
+        <CascadingBlazoredModal>
+
+        </CascadingBlazoredModal> *@
 
 
+        </div>
+    }
+</div>
 
 @code {
 
@@ -344,12 +149,9 @@ else
 
     private void ClearSearchText()
     {
-
         searchText = "";
+        searchResults = null;
     }
-
-
-
 
     List<PersonModel>? PersonList;
 
@@ -386,6 +188,7 @@ else
         else
         {
             searchResults = null; // Set it to null when search text is empty
+
         }
     }
 
